--- a/frontend/src/app/admin/shared/components/sidenav-admin/sidenav-admin.component.html
+++ b/frontend/src/app/admin/shared/components/sidenav-admin/sidenav-admin.component.html
@@ -9,7 +9,10 @@
                 <i class="material-icons">book</i> Maestrias
             </a>
             <a mat-list-item class="menu_item" routerLink="logos">
-                <i class="material-icons">picture_in_picture</i> Logos
+                <i class="material-icons">image</i> Imagenes
+            </a>
+            <a mat-list-item class="menu_item" routerLink="files">
+                <i class="material-icons"> insert_drive_file</i> Archivos
             </a>
             <a mat-list-item class="menu_item" routerLink="users">
                 <i class="material-icons">
