Servicios para cargar y elimnar archivos temrinados, pendientes algunos ajustes del frontend.

--- a/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.css
+++ b/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.css
@@ -10,7 +10,22 @@
 }
 
 .title {
+    background-color: #0e4674;
+    color: whitesmoke;
     display: flex;
     justify-content: center;
-    padding: 30px;
+}
+
+mat-card-header {
+    color: #0e4674;
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
+    font-weight: bold;
+    width: 100%;
+    padding: 0%;
+}
+
+span {
+    font-size: 18px;
 }
