--- a/frontend/src/app/admin/shared/components/sidenav-admin/sidenav-admin.component.html
+++ b/frontend/src/app/admin/shared/components/sidenav-admin/sidenav-admin.component.html
@@ -11,7 +11,7 @@
             <a mat-list-item class="menu_item" routerLink="logos">
                 <i class="material-icons">image</i> Imagenes
             </a>
-            <a mat-list-item class="menu_item" routerLink="files">
+            <a mat-list-item class="menu_item" routerLink="files-list">
                 <i class="material-icons"> insert_drive_file</i> Archivos
             </a>
             <a mat-list-item class="menu_item" routerLink="users">
