--- a/frontend/src/app/admin/components/files/files-list/files-list.component.html
+++ b/frontend/src/app/admin/components/files/files-list/files-list.component.html
@@ -1,9 +1,9 @@
 <div class="new-logo mt-4 p-4">
-    <button mat-raised-button routerLink="/admin/upload-logo">
+    <button mat-raised-button routerLink="/admin/upload-file">
         <mat-icon>
             add
         </mat-icon>
-    Nueva Imagen</button>
+    Nuevo Archivo</button>
 </div>
 
 <div class="select-master ">
@@ -12,7 +12,7 @@
             <h1>{{master}}</h1>
         </mat-card-header>
         <mat-card-content>
-            <button mat-raised-button (click)="selectedCard(master) ">Ver imagenes</button>
+            <button mat-raised-button (click)="selectedCard(master) ">Ver Archivos</button>
         </mat-card-content>
     </mat-card>
 </div>
