Creación de los servicios de usuarios terminados, sección de images-list convertida a responsive

--- a/frontend/src/app/admin/components/create-component/create-component.component.css
+++ b/frontend/src/app/admin/components/create-component/create-component.component.css
@@ -79,3 +79,14 @@ mat-label {
     color: #256991;
     font-weight: bold;
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+    color: whitesmoke;
+    background-color: #0877c7;
+    font-size: 26px;
+    align-items: center;
+    height: 100px;
+    font-weight: bold;
+}
