--- a/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.html
+++ b/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.html
@@ -1,6 +1,6 @@
 <div class="main">
 
-    <section class="title mt-4">
+    <section class="title">
         <h1 class="mt-4"> Imagenes de la maestría {{master_name}}</h1>
     </section>
 
