--- a/frontend/src/app/admin/components/masters-list/masters-list.component.html
+++ b/frontend/src/app/admin/components/masters-list/masters-list.component.html
@@ -1,5 +1,9 @@
+<div class="title">
+    Maestrias
+</div>
+
 <mat-card class="mat-elevation-z4">
-    <mat-card-title>Maestrias</mat-card-title>
+    <mat-card-title></mat-card-title>
     <a mat-raised-button (click)="redirectToMastersList()" id="create"> Crear nueva maestría
         <mat-icon>add</mat-icon>
     </a>
