--- a/frontend/src/app/admin/components/create-component/create-component.component.html
+++ b/frontend/src/app/admin/components/create-component/create-component.component.html
@@ -1,5 +1,8 @@
 <div class="main">
 
+    <div class="title">
+        <h1>Crear una maestría</h1>
+    </div>
     <mat-card class="mat-elevation-z4">
         <mat-card-title>
             Nueva maestría
