--- a/frontend/src/app/admin/components/files/files-list/files-list.component.html
+++ b/frontend/src/app/admin/components/files/files-list/files-list.component.html
@@ -1,3 +1,7 @@
+<div class="title p-4">
+    <h1>Archivos</h1>
+</div>
+
 <div class="new-logo mt-4 p-4">
     <button mat-raised-button routerLink="/admin/upload-file">
         <mat-icon>
@@ -6,7 +10,7 @@
     Nuevo Archivo</button>
 </div>
 
-<div class="select-master ">
+<div class="select-master">
     <mat-card class="p-4 text-fluid mat-elevation-z4" *ngFor="let master of masters; let i = index">
         <mat-card-header>
             <h1>{{master}}</h1>
