--- a/frontend/src/app/admin/components/files/view-master-file/view-master-file.component.html
+++ b/frontend/src/app/admin/components/files/view-master-file/view-master-file.component.html
@@ -1,4 +1,4 @@
-<div class="main p-4">
+<div class="main">
 
     <section class="title d-flex justify-content-center mb-4 ">
         <h1 class="mt-2">Documentos de la maestría {{master_name}}</h1>
@@ -9,11 +9,11 @@
         <div class="row d-flex justify-content-center" *ngFor="let photo of files; let i = index">
             <div class="col-xs-12 col-s-12 col-md-6 col-lg-4">
                 <mat-card *ngIf="files[i]['master'] == master_name" class="p-4 mb-4 mat-elevation-z4">
-                    <mat-card-header>
-                        <h1>Titulo: {{files[i]['title']}}</h1>
+                    <mat-card-header class="text-fluid">
+                        <h1 class="mt-2">{{files[i]['title']}}</h1>
                     </mat-card-header>
                     <mat-card-content class="img-fluid">
-                        <img src="../../../../../assets/images/file2.png" class="img-card-top w-100">
+                        <img src="../../../../../assets/images/file2.png" class="img-card-top w-100 mt-4 mb-4">
                         <span>Descripción: {{files[i]['description']}}</span>
                     </mat-card-content>
                     <mat-card-footer class="p-4">
