--- a/frontend/src/app/admin/components/images/images-list/images-list.component.html
+++ b/frontend/src/app/admin/components/images/images-list/images-list.component.html
@@ -1,18 +1,36 @@
-<div class="new-logo mt-4 p-4">
-    <button mat-raised-button routerLink="/admin/upload-logo">
-        <mat-icon>
-            add
-        </mat-icon>
-    Nueva Imagen</button>
-</div>
+<div class="container p-4">
+    <div class="row-xs-12 row-s12 row-md-12 row-lg-12">
 
-<div class="select-master ">
-    <mat-card class="p-4 text-fluid mat-elevation-z4" *ngFor="let master of masters; let i = index">
-        <mat-card-header>
-            <h1>{{master}}</h1>
-        </mat-card-header>
-        <mat-card-content>
-            <button mat-raised-button (click)="selectedCard(master) ">Ver imagenes</button>
-        </mat-card-content>
-    </mat-card>
+        <div class="row  row-xs-12 row-md-12 row-lg-12 title p-4">
+            <h1>Imagenes</h1>
+        </div>
+
+        <div class="row row-xs-12 row-md-12 row-lg-12 new-logo mt-4 p-4">
+            <button mat-raised-button routerLink="/admin/upload-logo">
+                    <mat-icon>
+                        add
+                    </mat-icon>
+                Nueva Imagen</button>
+        </div>
+
+
+        <div class="row row-xs-12 row-md-12 row-sm-12 row-lg-12">
+
+
+            <mat-card class=" p-4 text-fluid mat-elevation-z4
+            col-xs-12
+            col-sm-6 col-md-4 col-lg-4 col-xl-2" *ngFor="let master of masters; let i = index">
+                <mat-card-header>
+                    <h1>{{master}}</h1>
+                </mat-card-header>
+                <mat-card-content>
+                    <button mat-raised-button (click)="selectedCard(master) ">Ver imagenes</button>
+                </mat-card-content>
+            </mat-card>
+
+
+
+        </div>
+
+    </div>
 </div>
