--- a/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.css
+++ b/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.css
@@ -10,20 +10,23 @@
 }
 
 .title {
-    background-color: #0e4674;
-    color: whitesmoke;
     display: flex;
     justify-content: center;
+    color: whitesmoke;
+    background-color: #0877c7;
+    font-size: 26px;
+    align-items: center;
+    height: 100px;
 }
 
 mat-card-header {
-    color: #0e4674;
+    color: whitesmoke;
+    background-color: #3372a5;
     display: flex;
     justify-content: center;
-    font-size: x-large;
-    font-weight: bold;
-    width: 100%;
-    padding: 0%;
+    align-items: center;
+    height: auto;
+    border-radius: 5px;
 }
 
 span {
