--- a/frontend/src/app/admin/components/user/user.component.css
+++ b/frontend/src/app/admin/components/user/user.component.css
@@ -1,5 +1,5 @@
 .conatiner {
-    width: 100%;
+    width: 50%;
     height: 100%;
 }
 
@@ -30,4 +30,8 @@ button {
 
 #tables {
     margin-top: 30px;
+}
+
+.row {
+    width: 90%;
 }
