Seccion de maestrias e imganes terminadas de forma responsive

--- a/frontend/src/app/admin/components/images/image-form/image-form.component.html
+++ b/frontend/src/app/admin/components/images/image-form/image-form.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-4 mx-auto">
+<div class=" col col-xs-12 col-sm-6 col-md-6 col-lg-4 mx-auto">
     <div class="card mt-4">
         <div class="card-header">
             <h1>Crear nueva imagen</h1>
