--- a/frontend/src/app/admin/components/images/images-list/images-list.component.css
+++ b/frontend/src/app/admin/components/images/images-list/images-list.component.css
@@ -40,6 +40,7 @@ mat-card-content {
 
 button {
     transition: background-color .5s;
+    width: 300px;
 }
 
 button:hover {
@@ -60,4 +61,8 @@ button:hover {
 .container {
     width: 100%;
     height: 100%;
+}
+
+h1 {
+    width: auto;
 }
