--- a/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.css
+++ b/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.css
@@ -1,7 +1,6 @@
-.main {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+.container {
+    width: 100%;
+    height: 100%;
 }
 
 .images-list {
@@ -31,4 +30,11 @@ mat-card-header {
 
 span {
     font-size: 18px;
+}
+
+mat-card {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-right: 5px;
 }
