--- a/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.html
+++ b/frontend/src/app/admin/components/images/view-master-images/view-master-images.component.html
@@ -1,25 +1,24 @@
-<div class="main">
+<div class="container p-2">
 
-    <section class="title">
+    <section class="title row row-sm-12- row-md-12 row-lg-12">
         <h1 class="mt-4"> Imagenes de la maestría {{master_name}}</h1>
     </section>
 
-    <section class="images-list mt-4" *ngFor="let photo of photos; let i = index">
-        <div class="col-xs-12 col-x-12 col-md-4 col-lg-4 col-xl-6">
-            <mat-card *ngIf="photos[i]['master'] == master_name" class="p-4 mb-4 mat-elevation-z4">
-                <mat-card-header class="mb-2">
-                    <h1 class="d-flex justify-content alig-items">{{photos[i]['title']}}</h1>
-                </mat-card-header>
-                <mat-card-content class="img-fluid mt-4 mb-4">
-                    <img [src]="'http://localhost:4000/' + photo.imagePath" class="img-card-top w-100 mb-2">
-                    <span class="mt-2">{{photos[i]['description']}}</span>
-                </mat-card-content>
-                <mat-card-footer class="p-4 mt-4">
-                    <button class="btn btn-danger" (click)="deleteimage(photos[i]['_id'])">Delete</button>
-                </mat-card-footer>
-            </mat-card>
-        </div>
-    </section>
+    <div class="images-list mt-4 row row-sm-12- row-md-12 row-lg-12">
+        <mat-card *ngFor="let photo of photos; let i = index" class="p-4 mb-4 mat-elevation-z4
+        col col-xs-12 col-s-12 col-md-4 col-lg-4 col-xl-6">
+            <mat-card-header class="mb-2">
+                <h1 class="d-flex justify-content alig-items">{{photos[i]['title']}}</h1>
+            </mat-card-header>
+            <mat-card-content class="img-fluid mt-4 mb-4">
+                <img [src]="'http://localhost:4000/' + photo.imagePath" class="img-card-top w-100 mb-2">
+                <span class="mt-2">{{photos[i]['description']}}</span>
+            </mat-card-content>
+            <mat-card-footer class="p-4 mt-4">
+                <button class="btn btn-danger" (click)="deleteimage(photos[i]['_id'])">Delete</button>
+            </mat-card-footer>
+        </mat-card>
+    </div>
 
 
 
